tests/test_app/TestApp/Error/TestDebugger.php
<?php
declare(strict_types=1);

namespace TestApp\Error;

use Cake\Error\Debugger;

class TestDebugger extends Debugger
{
}
